--- a/myblog/blog/templates/blog/post_list.html
+++ b/myblog/blog/templates/blog/post_list.html
@@ -8,7 +8,7 @@
     <ul>
         {% for post in posts %}
             <li>
-                <a href="{{ post.id }}/">{{ post.title }}</a> 
+                <a href="post/{{ post.id }}/">{{ post.title }}</a> 
                 ({{ post.created|date:"Y-m-d H:i" }})
             </li>
         {% endfor %}
