--- a/myblog/blog/templates/blog/post_detail.html
+++ b/myblog/blog/templates/blog/post_detail.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ post.title }}</title>
-</head>
-<body>
-    <h1>{{ post.title }}</h1>
+{% extends "blog/base.html" %}
+
+{% block title %}{{ post.title }} - My Blog{% endblock %}
+
+{% block content %}
+    <h2>{{ post.title }}</h2>
     <p>{{ post.created|date:"Y-m-d H:i" }}</p>
     <p>{{ post.content }}</p>
     <a href="/">Back to Homepage</a>
-</body>
-</html>
+{% endblock %}
