--- a/myblog/blog/templates/blog/post_list.html
+++ b/myblog/blog/templates/blog/post_list.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Blog Homepage</title>
-</head>
-<body>
-    <h1>Blog Posts</h1>
+{% extends "blog/base.html" %}
+
+{% block title %}Homepage - My Blog{% endblock %}
+
+{% block content %}
+    <h2>Blog Posts</h2>
     <ul>
         {% for post in posts %}
             <li>
-                <a href="post/{{ post.id }}/">{{ post.title }}</a> 
+                <a href="post/{{ post.id }}/">{{ post.title }}</a>
                 ({{ post.created|date:"Y-m-d H:i" }})
             </li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
